--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script defer src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script defer src="https://developers.kakao.com/sdk/js/kakao.js">    </script>
+    <script>
+      <manifest package="com.ditZip">
+        <queries>
+          <package android:name="com.kakao.talk" />
+        </queries>
+      </manifest>
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
