--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,29 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PARD / HI^5 / 기획자 : 배예진 / 디자이너 : 조세희 / 웹개발자 : 김현승, 김지수, 이한나"
     />
+    <meta
+    name="og:site_name"
+    content="dotZip"
+  />
+  <meta
+    name="og:title"
+    content="dotZip"
+  />
+  <meta
+    name="og:description"
+    content="'내가 떠오르는 컬러는 뭐야?' '나를 표현하는 형용사는?' 궁금했던 질문을 공유하고, 쉽고 빠르게 투표받아보세요. 내 모습을 모아볼 수 있는 .ZiP까지! 지인들의 눈을 통해 나에게 몰입하는 여정의 시작, 닷집."
+  />
+  <meta
+    name="og:type"
+    content= "website"
+  />
+  <meta
+    name="og:url"
+    content="dotZip.swygbro.com"
+  />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
