--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script defer src="https://cdn.swygbro.com/public/widget/swyg-widget.js"></script>
-    <title>DotZip</title>
+    <title>dotZiP</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -12,11 +12,11 @@
     />
     <meta
     name="og:site_name"
-    content="닷집"
+    content="dotZiP"
   />
   <meta
     name="og:title"
-    content="dotZip"
+    content="dotZiP"
   />
   <meta
     name="og:description"
@@ -35,7 +35,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -45,15 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
     <script defer src="https://developers.kakao.com/sdk/js/kakao.js">    </script>
-    <script>
-      <manifest package="com.ditZip">
-        <queries>
-          <package android:name="com.kakao.talk" />
-        </queries>
-      </manifest>
-    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
