썸네일 작업

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
     name="og:url"
     content="dotZip.swygbro.com"
   />
+  <meta
+    name="og:image"
+    content="../src/img/kakaoImage.png"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
